# Generated by Django 6.0.5 on 2026-06-12 10:06

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models

import core.constants


class Migration(migrations.Migration):
    initial = True

    dependencies = [
        ("property", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Agent",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True, verbose_name="Created At")),
                ("updated_at", models.DateTimeField(auto_now=True, verbose_name="Updated At")),
                ("deleted_at", models.DateTimeField(blank=True, db_index=True, null=True, verbose_name="Deleted At")),
                ("restored_at", models.DateTimeField(blank=True, null=True, verbose_name="Restored At")),
                ("transaction_id", models.UUIDField(blank=True, null=True, verbose_name="Transaction ID")),
                ("total_deals", models.PositiveIntegerField(default=0)),
                ("total_revenue", models.DecimalField(decimal_places=2, default=0, max_digits=14)),
                ("commission_rate", models.DecimalField(decimal_places=2, default=10.0, max_digits=5)),
                ("is_active", models.BooleanField(default=True)),
                (
                    "user",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="agent_profile",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "verbose_name": "Agent",
                "verbose_name_plural": "Agents",
                "db_table": "agents",
                "ordering": ["-created_at"],
            },
        ),
        migrations.CreateModel(
            name="AgentDeal",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True, verbose_name="Created At")),
                ("updated_at", models.DateTimeField(auto_now=True, verbose_name="Updated At")),
                ("deleted_at", models.DateTimeField(blank=True, db_index=True, null=True, verbose_name="Deleted At")),
                ("restored_at", models.DateTimeField(blank=True, null=True, verbose_name="Restored At")),
                ("transaction_id", models.UUIDField(blank=True, null=True, verbose_name="Transaction ID")),
                ("deal_date", models.DateField()),
                ("rent_amount", models.DecimalField(decimal_places=2, max_digits=12)),
                ("commission_amount", models.DecimalField(decimal_places=2, max_digits=12)),
                (
                    "status",
                    models.CharField(choices=core.constants.AgentDealStatus.choices, default="closed", max_length=20),
                ),
                (
                    "agent",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE, related_name="deals", to="agent.agent"
                    ),
                ),
                (
                    "property",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT, related_name="agent_deals", to="property.property"
                    ),
                ),
            ],
            options={
                "verbose_name": "Agent Deal",
                "verbose_name_plural": "Agent Deals",
                "db_table": "agent_deals",
                "ordering": ["-deal_date"],
            },
        ),
    ]
